--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
   "devDependencies": {
     "browser": "^0.2.6",
     "browser-sync": "^2.29.3",
-    "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^8.0.0",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^6.1.0",
     "gulp-clean-css": "^4.3.0",
     "gulp-cli": "^2.3.0",
     "gulp-sass": "^5.1.0",
     "sass": "^1.64.2"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "bootstrap": "^5.3.0",
     "gulp-rename": "^2.0.0"
   }
